--- a/package.json
+++ b/package.json
@@ -42,6 +42,9 @@
   "devDependencies": {
     "eslint-config-trybe-fundamentals": "1.1.0",
     "faker": "5.5.3",
-    "jest": "25.2.3"
+    "jest": "^25.2.3"
+  },
+  "dependencies": {
+    "@types/jest": "^28.1.0"
   }
 }
